force-app/main/default/objects/CareCloud_Visit_Reason__mdt/CareCloud_Visit_Reason__mdt.object-meta.xml
<CustomObject>
    <description>Visit reasons from CareCloud to be used in formula fields on Appointments table.</description>
    <label>CareCloud Visit Reason</label>
    <pluralLabel>CareCloud Visit Reasons</pluralLabel>
</CustomObject>