force-app/main/default/objects/CareCloud_Visit_Reason__mdt/fields/CareCloud_Description__c.field-meta.xml
<CustomField>
    <fullName>CareCloud_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>