force-app/main/default/objects/CareCloud_Visit_Reason__mdt/fields/CareCloud_Id__c.field-meta.xml
<CustomField>
    <fullName>CareCloud_Id__c</fullName>
    <description>Id assigned in CareCloud to the visit reason.</description>
    <label>CareCloud Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>