force-app/main/default/objects/CareCloud_Visit_Reason__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Visit reason name from CareCloud.</description>
    <label>Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>